--- a/mods/create-steam-n-rails.pw.toml
+++ b/mods/create-steam-n-rails.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Steam 'n' Rails"
-filename = "Steam_Rails-1.5.0+forge-mc1.19.2-build.13.jar"
+filename = "Steam_Rails-1.5.1+forge-mc1.19.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "4df393dd8f6e84d60af6d29133bb6f9245c10053"
+hash = "9463a099377435b2494b2c9a91efad5b4e0d010c"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4726383
+file-id = 4746992
 project-id = 688231
