--- a/mods/create-enchantment-industry.pw.toml
+++ b/mods/create-enchantment-industry.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Enchantment Industry"
-filename = "create_enchantment_industry-1.19.2-for-create-0.5.1.c-1.2.6.b.jar"
+filename = "create_enchantment_industry-1.19.2-for-create-0.5.1.e-1.2.7.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "a994e7a45f8882b44d66c287e5dcb6fefe1d5293"
+hash = "cb8962b1602b6290772b1a6de486441f6a2feea2"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4707377
+file-id = 4783074
 project-id = 688768
