--- a/mods/respiteful.pw.toml
+++ b/mods/respiteful.pw.toml
@@ -1,13 +1,13 @@
 name = "Respiteful"
-filename = "respiteful-1.19.2-1.1.2.b.jar"
+filename = "respiteful-1.1.2.c.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "3f935292dd83c00ec9ae098c5ae9ad1b1a90677a"
+hash = "be84c4ce59af8dfaec1c8a73171afa64a86e0c21"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4678477
+file-id = 4828063
 project-id = 836471
