--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items (JEI)"
-filename = "jei-1.20.1-forge-15.4.0.9.jar"
-side = "both"
+filename = "jei-1.20.1-forge-15.8.0.13.jar"
+side = "client"
 
 [download]
 hash-format = "sha1"
-hash = "b2e55d035b087cbaa2127d077dc61c4afef102ce"
+hash = "b25adb4315b3311d6c66802f3c3e568c03a6daae"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5528637
+file-id = 5542776
 project-id = 238222
